Fixing whitespaces and height properties

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,16 +56,16 @@
   font-style: normal;
   line-height: 135%;
   letter-spacing: 0.01em;
-  text-underline-offset: 3.5px; 
+  text-underline-offset: 3.5px;
 }
 
 .cover {
   position: relative;
   z-index: 0;
   width: 1100px;
-  max-height: 757px;
-  margin-bottom: 179px;
-  padding: 165px 50px 50px 50px;
+  min-height: 757px;
+  margin-bottom: 178px;
+  padding: 165px 50px 9px 50px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -79,7 +79,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover__title {
@@ -161,7 +161,11 @@
 .lots__card-list {
   display: flex;
   flex-wrap: wrap;
+  gap: 25px;
+  width: 100%;
+  height: 100%;
   margin: 0 0 30px;
+  padding: 0 24px;
 }
 
 .lots__card-list-item {
@@ -181,14 +185,25 @@
   align-items: center;
   width: 334px;
   min-height: 563px;
-  margin-left: 25px;
+  /* margin-left: 25px; */
   padding: 51px 40px 48px 40px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card_type_film,
 .card_type_book,
 .card_type_picture {
-  background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -281,9 +296,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0 50px 88px;
-
 }
-
 
 .footer__menu-list-item {
   margin-left: 33px;
